# cygaz

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cspell.json
.github/workflows/: docker-image.yml  docker-publish.yml  docker.yml  pr_merge.yml
cygaz-lib/: Cargo.toml
cygaz-lib/src/: area.rs  district.rs  districts.rs  lib.rs  price.rs  station.rs
src/: main.rs
