[package]
name = "cygaz"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[dependencies]
cygaz-lib = { path = "cygaz-lib" }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.7"
serde_json = "1.0"
log = "0.4"
envy = "0.4"
uuid = { version = "1.8", features = ["serde", "v4", "fast-rng"] }
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1.38", features = ["full"] }
tokio-cron-scheduler = "0.10"

[profile.release]
strip = "debuginfo"
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
