[package]
name = "cygaz"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
panic = 'abort'     # Abort on panic
overflow-checks = true
codegen-units = 1

[workspace]
members = [
    "cygaz-lib"
]

[workspace.package]
version = "0.1.11"
edition = "2021"

[workspace.dependencies]
cygaz-lib = { path = "cygaz-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "cookies", "gzip", "brotli", "deflate", "multipart"] }

[dependencies]
cygaz-lib = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
env_logger = "0.11"
actix-web = "4.8"
log = "0.4"
envy = "0.4"
uuid = { version = "1.10", features = ["serde", "v4", "fast-rng"] }
tokio = { version = "1.39", features = ["full"] }
tokio-cron-scheduler = "0.10"
chrono = { version = "0.4" }

