[package]
name = "cygaz-lib"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "cookies", "gzip", "brotli", "deflate", "multipart"] }
url = { version = "2.2", features = ["serde"] }
serde_json = "1.0"
serde = "1.0"
scraper = "0.18"

[profile.release]
strip = "debuginfo"
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
