[package]
name = "cygaz-lib"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib", "cdylib"]

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
url = { version = "2.2", features = ["serde"] }
scraper = "0.21"

[profile.release]
strip = "debuginfo"
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
