[package]
name = "cygaz-lib"
version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "experimental" }

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["lib", "cdylib"]

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true }
url = { version = "2.5", features = ["serde"] }
scraper = "0.23"
lazy_static = "1.5"
ordered-float = "5.0"
convert_case = "0.8"

[profile.release]
strip = "debuginfo"
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
